--- a/html/page_String.html
+++ b/html/page_String.html
@@ -129,6 +129,16 @@ class <span class="Att">String</span>
 <b>String::StaticObject&lt;CC&gt;</b> makes a static object, identified by the character sequence <b>CC</b>. This sequence determines the string text.
 </p>
 
+<p>
+You can get a reference on the static string using the user-defined literal <b>""_str</b>:
+</p>
+
+<pre>
+
+const String &amp;obj = "This is a static string"_str ;
+
+</pre>
+
 <h4>PrintString</h4>
 
 <p>
