--- a/html/page_Files.html
+++ b/html/page_Files.html
@@ -381,7 +381,7 @@ Write MAY extend the file. The return value should be equal to the given length,
 reason to implement another behavior. 
 </p>
 
-<h4>Alternative set</h4>
+<a name="AltSet"><h4>Alternative set</h4></a>
 
 <p>
 And the alternative set is:
