--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
    <li><a href="html/page_ObjectDomain.html">Object Domain</a></li>
    <li><a href="html/page_StepEval.html">StepEval</a></li>
    <li><a href="html/page_Volume.html">Volume</a></li>
+   <li><a href="html/page_BinFileToRead.html">BinFileToRead</a></li>
   </ol>
  </li>
 
