--- a/html/page_AES.html
+++ b/html/page_AES.html
@@ -35,23 +35,23 @@
 <h4>Software AES implementation</h4>
 
 <p>
-There are six AES-related types. All of them are <a href="page_BlockCipher.html"><b>BlockCipher<....></b></a> and implement AES cipher
+There are six AES-related types. All of them are <a href="page_BlockCipher.html"><b>BlockCipher&lt;....&gt;</b></a> and implement AES cipher
 algorithms.
 </p>
 
 <pre>
 
-using <span class="Att">AES128</span> = BlockCipher<....> ;
+using <span class="Att">AES128</span> = BlockCipher&lt;....&gt; ;
 
-using <span class="Att">AES192</span> = BlockCipher<....> ;
+using <span class="Att">AES192</span> = BlockCipher&lt;....&gt; ;
 
-using <span class="Att">AES256</span> = BlockCipher<....> ;
+using <span class="Att">AES256</span> = BlockCipher&lt;....&gt; ;
 
-using <span class="Att">AESInverse128</span> = BlockCipher<....> ;
+using <span class="Att">AESInverse128</span> = BlockCipher&lt;....&gt; ;
 
-using <span class="Att">AESInverse192</span> = BlockCipher<....> ;
+using <span class="Att">AESInverse192</span> = BlockCipher&lt;....&gt; ;
 
-using <span class="Att">AESInverse256</span> = BlockCipher<....> ;
+using <span class="Att">AESInverse256</span> = BlockCipher&lt;....&gt; ;
 
 </pre>
 
