--- a/html/page_CheckedData.html
+++ b/html/page_CheckedData.html
@@ -58,7 +58,7 @@ class <span class="Att">CheckedData</span>
 <p>
 The method <b>getLen()</b> selects the random length from <b>2</b> to <b>max_len</b>. 
 <b>max_len</b> should be <b> > 2 </b>. 
-If the <b>max_len</b> <= 2, the <b>max_len</b> is always returned.
+If the <b>max_len</b> &lt;= 2, the <b>max_len</b> is always returned.
 </p>
 
 <p>
