--- a/html/page_CondLangLR1.html
+++ b/html/page_CondLangLR1.html
@@ -198,7 +198,7 @@ a kind is less than another kind, if it appears earlier in the kinds list.
 
 <pre>
 
-KindName<sub>1</sub> < KindName<sub>2</sub> < ... < KindName<sub>n</sub>
+KindName<sub>1</sub> &lt; KindName<sub>2</sub> &lt; ... &lt; KindName<sub>n</sub>
 
 </pre>
 
@@ -289,10 +289,10 @@ Prime expressions are comparison expressions:
 
   Name<sub>1</sub> == Name<sub>2</sub>
   Name<sub>1</sub> != Name<sub>2</sub>
-  Name<sub>1</sub> < Name<sub>2</sub> 
-  Name<sub>1</sub> <= Name<sub>2</sub>
-  Name<sub>1</sub> > Name<sub>2</sub> 
-  Name<sub>1</sub> >= Name<sub>2</sub>
+  Name<sub>1</sub> &lt; Name<sub>2</sub> 
+  Name<sub>1</sub> &lt;= Name<sub>2</sub>
+  Name<sub>1</sub> &gt; Name<sub>2</sub> 
+  Name<sub>1</sub> &gt;= Name<sub>2</sub>
 
 </pre>
 
