--- a/html/page_EuclidRotate.html
+++ b/html/page_EuclidRotate.html
@@ -42,9 +42,9 @@ struct <span class="Att">Algon::EuclidRotateAlgo</span> : Algo
  {
   static void Rotate(R r,LenType prefix,LenType suffix); // prefix+suffix == GetLen(r)
   
-  static void Rotate_prefix(R r,LenType prefix); // prefix <= GetLen(r)
+  static void Rotate_prefix(R r,LenType prefix); // prefix &lt;= GetLen(r)
   
-  static void Rotate_suffix(R r,LenType suffix); // suffix <= GetLen(r)
+  static void Rotate_suffix(R r,LenType suffix); // suffix &lt;= GetLen(r)
  };
 
 </pre>
