--- a/html/page_HCoreTargets.html
+++ b/html/page_HCoreTargets.html
@@ -173,13 +173,13 @@ TOUCH = /usr/bin/touch
 
 CC_ = /opt/gcc-7.1.0/bin/g++-7.1.0.exe
 
-CC = @$(ECHO) CC $< ; $(CC_)
+CC = @$(ECHO) CC $&lt; ; $(CC_)
 
 LD = @$(ECHO) LD $@ ; $(CC_)
 
 AS_ = as
 
-AS = @$(ECHO) AS $< ; $(AS_)
+AS = @$(ECHO) AS $&lt; ; $(AS_)
 
 AR_ = ar
 
