--- a/html/page_PtrLenReverse.html
+++ b/html/page_PtrLenReverse.html
@@ -154,9 +154,9 @@ Methods <b>fit()</b> can be used to check the length of the range.
 
   // fit
    
-  bool fit(ulen length) const { return length<=len; }
+  bool fit(ulen length) const { return length&lt;=len; }
   
-  bool fit(ulen off,ulen length) const { return off<=len && length<=(len-off) ; }
+  bool fit(ulen off,ulen length) const { return off&lt;=len && length&lt;=(len-off) ; }
 
 </pre>  
 
