--- a/html/page_Rot.html
+++ b/html/page_Rot.html
@@ -39,7 +39,7 @@ This is a set of rotation functions.
 /* Ror...() */ 
 
 template &lt;UIntType UInt,unsigned UIntBits&gt;
-UInt <span class="Att">Ror_gen</span>(UInt a,unsigned n); // 0 < n < UIntBits 
+UInt <span class="Att">Ror_gen</span>(UInt a,unsigned n); // 0 &lt; n &lt; UIntBits 
  
 uint8 <span class="Att">Ror8</span>(uint8 a,unsigned n);
  
@@ -52,7 +52,7 @@ uint64 <span class="Att">Ror64</span>(uint64 a,unsigned n);
 /* Rol...() */
 
 template &lt;UIntType UInt,unsigned UIntBits&gt;
-UInt <span class="Att">Rol_gen</span>(UInt a,unsigned n); // 0 < n < UIntBits
+UInt <span class="Att">Rol_gen</span>(UInt a,unsigned n); // 0 &lt; n &gt; UIntBits
  
 uint8 <span class="Att">Rol8</span>(uint8 a,unsigned n);
  
