--- a/html/page_ScanBit.html
+++ b/html/page_ScanBit.html
@@ -58,9 +58,9 @@ class <span class="Att">ScanBit</span>
    
    Unit test(ulen ind) const;
   
-   ulen findMin(ulen ind) const; // min>=ind , if( not found ) return IndexLim; 
+   ulen findMin(ulen ind) const; // min&gt;=ind , if( not found ) return IndexLim; 
    
-   ulen findMax(ulen ind) const; // max<=ind , if( not found ) return IndexLim;
+   ulen findMax(ulen ind) const; // max&lt;=ind , if( not found ) return IndexLim;
  };
 
 </pre>
