--- a/html/page_UIntSat.html
+++ b/html/page_UIntSat.html
@@ -92,7 +92,7 @@ UIntSat&lt;ulen&gt; len=len1;
 len+=len2;
 len+=len3;
 
-if( len<=max_len )
+if( len&lt;=max_len )
   {
    // ok
   }
@@ -137,7 +137,7 @@ inline constexpr UInt <span class="Att">UIntConstMul</span> = .... ;
 </p>
 
 <p>
-<b>UIntConstSub</b> has the value <b>A-B</b> if <b>A >= B</b>, otherwise not defined.
+<b>UIntConstSub</b> has the value <b>A-B</b> if <b>A &gt;= B</b>, otherwise not defined.
 </p>
 
 <p>
