--- a/html/page_UtilFunc.html
+++ b/html/page_UtilFunc.html
@@ -272,7 +272,7 @@ constexpr SUInt <span class="Att">RoundDown</span>(SUInt x,SUInt g)
 
 <p>
 The first function returns the result of division of the first argument by the second, rounded down. 
-I.e. it is the maximum value <b>res</b>, such that <b>g*res <= x</b>.
+I.e. it is the maximum value <b>res</b>, such that <b>g*res &lt;= x</b>.
 </p>
 
 <p>
