--- a/html/page_XCoreTargets.html
+++ b/html/page_XCoreTargets.html
@@ -162,13 +162,13 @@ TOUCH = /usr/bin/touch
 
 CC_ = /opt/BBB-7.1.0/bin/arm-g++.exe
 
-CC = @$(ECHO) CC $< ; $(CC_)
+CC = @$(ECHO) CC $&lt; ; $(CC_)
 
 LD = @$(ECHO) LD $@ ; $(CC_)
 
 AS_ = /opt/BBB-7.1.0/bin/arm-as.exe
 
-AS = @$(ECHO) AS $< ; $(AS_)
+AS = @$(ECHO) AS $&lt; ; $(AS_)
 
 AR_ = /opt/BBB-7.1.0/bin/arm-ar.exe
 
