--- a/html/page_XCore_SysTime.html
+++ b/html/page_XCore_SysTime.html
@@ -212,7 +212,7 @@ ClockTimeType GetClockTime() noexcept
 
 void ClockDelay(ClockTimeType clocks) noexcept
  {
-  for(auto start=GetClockTime(); GetClockTime()-start<=clocks ;);
+  for(auto start=GetClockTime(); GetClockTime()-start&lt;=clocks ;);
  }
 
 } // namespace Sys
