--- a/html/page_DDLEngine.html
+++ b/html/page_DDLEngine.html
@@ -1184,7 +1184,7 @@ Polymorphic pointers are mapped as <b>MapPolyPtr</b>.
 <pre>
 
 template &lt;class ... TT&gt;
-struct <span class="Att">MapPolyPtr</span> // layout-compatible with MapPolyPtr<>
+struct <span class="Att">MapPolyPtr</span> // layout-compatible with MapPolyPtr&lt;&gt;
  {
   // data
   
@@ -1392,8 +1392,8 @@ struct TypeDefCore
   struct S10; // #Atom
   struct S11; // #Lang
 
-  using A1 = DDL2::MapPolyPtr< S10 , S8 > ; // #TopRule#Arg
-  using A2 = DDL2::MapPolyPtr< S10 , S9 > ; // #Rule#Arg
+  using A1 = DDL2::MapPolyPtr&lt; S10 , S8 &gt; ; // #TopRule#Arg
+  using A2 = DDL2::MapPolyPtr&lt; S10 , S9 &gt; ; // #Rule#Arg
   using A3 = uint32 ; // #FinalIndex
   using A4 = uint32 ; // #StateIndex
   using A5 = uint32 ; // #RuleIndex
@@ -1409,8 +1409,8 @@ struct TypeDefCore
 
   struct S1
    {
-    DDL2::MapPtr< S10 > atom;
-    DDL2::MapPtr< S6 > rule;
+    DDL2::MapPtr&lt; S10 &gt; atom;
+    DDL2::MapPtr&lt; S6 &gt; rule;
 
     struct Ext;
    };
@@ -1418,7 +1418,7 @@ struct TypeDefCore
   struct S2
    {
     A3 index;
-    DDL2::MapRange< S1 > actions;
+    DDL2::MapRange&lt; S1 &gt; actions;
 
     using Action = XXX8226D906_9898_43AA_B1BE_D60B0A6E31C8::S1 ;
 
@@ -1427,8 +1427,8 @@ struct TypeDefCore
 
   struct S3
    {
-    DDL2::MapPtr< S7 > element;
-    DDL2::MapPtr< S4 > state;
+    DDL2::MapPtr&lt; S7 &gt; element;
+    DDL2::MapPtr&lt; S4 &gt; state;
 
     struct Ext;
    };
@@ -1436,8 +1436,8 @@ struct TypeDefCore
   struct S4
    {
     A4 index;
-    DDL2::MapPtr< S2 > final;
-    DDL2::MapRange< S3 > transitions;
+    DDL2::MapPtr&lt; S2 &gt; final;
+    DDL2::MapRange&lt; S3 &gt; transitions;
 
     using Transition = XXX8226D906_9898_43AA_B1BE_D60B0A6E31C8::S3 ;
 
@@ -1448,9 +1448,9 @@ struct TypeDefCore
    {
     A5 index;
     DDL2::MapText name;
-    DDL2::MapPtr< S6 > bottom;
-    DDL2::MapPtr< S8 > result;
-    DDL2::MapRange< A1 > args;
+    DDL2::MapPtr&lt; S6 &gt; bottom;
+    DDL2::MapPtr&lt; S8 &gt; result;
+    DDL2::MapRange&lt; A1 &gt; args;
 
     using Arg = XXX8226D906_9898_43AA_B1BE_D60B0A6E31C8::A1 ;
 
@@ -1461,8 +1461,8 @@ struct TypeDefCore
    {
     A5 index;
     DDL2::MapText name;
-    DDL2::MapPtr< S8 > result;
-    DDL2::MapRange< A2 > args;
+    DDL2::MapPtr&lt; S8 &gt; result;
+    DDL2::MapRange&lt; A2 &gt; args;
 
     using Arg = XXX8226D906_9898_43AA_B1BE_D60B0A6E31C8::A2 ;
 
@@ -1472,7 +1472,7 @@ struct TypeDefCore
   struct S7
    {
     A6 index;
-    DDL2::MapPolyPtr< S10 , S8 > elem;
+    DDL2::MapPolyPtr&lt; S10 , S8 &gt; elem;
 
     struct Ext;
    };
@@ -1482,9 +1482,9 @@ struct TypeDefCore
     A7 kindex;
     A7 index;
     DDL2::MapText name;
-    DDL2::MapPtr< S9 > synt;
-    DDL2::MapPtr< S7 > element;
-    DDL2::MapRange< DDL2::MapPtr< S5 > > rules;
+    DDL2::MapPtr&lt; S9 &gt; synt;
+    DDL2::MapPtr&lt; S7 &gt; element;
+    DDL2::MapRange&lt; DDL2::MapPtr&lt; S5 &gt; &gt; rules;
 
     struct Ext;
    };
@@ -1493,8 +1493,8 @@ struct TypeDefCore
    {
     A8 index;
     DDL2::MapText name;
-    DDL2::MapRange< S8 > kinds;
-    DDL2::MapRange< DDL2::MapPtr< S6 > > rules;
+    DDL2::MapRange&lt; S8 &gt; kinds;
+    DDL2::MapRange&lt; DDL2::MapPtr&lt; S6 &gt; &gt; rules;
 
     struct Ext;
    };
@@ -1503,21 +1503,21 @@ struct TypeDefCore
    {
     A9 index;
     DDL2::MapText name;
-    DDL2::MapPtr< S7 > element;
+    DDL2::MapPtr&lt; S7 &gt; element;
 
     struct Ext;
    };
 
   struct S11
    {
-    DDL2::MapRange< S10 > atoms;
-    DDL2::MapRange< S9 > synts;
-    DDL2::MapRange< DDL2::MapPtr< S9 > > lang;
-    DDL2::MapRange< S7 > elements;
-    DDL2::MapRange< S6 > rules;
-    DDL2::MapRange< S5 > top_rules;
-    DDL2::MapRange< S4 > states;
-    DDL2::MapRange< S2 > finals;
+    DDL2::MapRange&lt; S10 &gt; atoms;
+    DDL2::MapRange&lt; S9 &gt; synts;
+    DDL2::MapRange&lt; DDL2::MapPtr&lt; S9 &gt; &gt; lang;
+    DDL2::MapRange&lt; S7 &gt; elements;
+    DDL2::MapRange&lt; S6 &gt; rules;
+    DDL2::MapRange&lt; S5 &gt; top_rules;
+    DDL2::MapRange&lt; S4 &gt; states;
+    DDL2::MapRange&lt; S2 &gt; finals;
 
     struct Ext;
    };
