--- a/html/page_NanoPackets.html
+++ b/html/page_NanoPackets.html
@@ -40,7 +40,7 @@ and <b>NanoPacketPool</b>.
 The initial part of the body carries data.
 </p>
 
-<image src="NanoPacket.png" />
+<img src="NanoPacket.png">
 
 <h4>NanoPacket</h4>
 
