--- a/html/page_RangeDel.html
+++ b/html/page_RangeDel.html
@@ -142,7 +142,7 @@ bool <span class="Att">GuardIndexCount</span>(ulen ind,ulen count,ulen len);
 
 <p>
 This function is used to fit the subrange. It returns <b>true</b> if <b>count</b> is zero.
-Otherwise the following condition must be satisfied: <b> ind + count <= len </b>.
+Otherwise the following condition must be satisfied: <b> ind + count &lt;= len </b>.
 If not, an exception is thrown. If yes, <b>false</b> is returned.
 </p>
 
