--- a/html/page_UIntFunc.html
+++ b/html/page_UIntFunc.html
@@ -119,14 +119,14 @@ as a signed in 2's complement representation and return its signed properties.
 </p>
 
 <p>
-<b>BitsOf()</b> returns the number of bits of the argument. I.e. it is a minimum number <b>n</b>, such that <b>a < 2<sup>n</sup></b> .
+<b>BitsOf()</b> returns the number of bits of the argument. I.e. it is a minimum number <b>n</b>, such that <b>a &lt; 2<sup>n</sup></b> .
 </p>
 
 <pre>
 
   // square root
   
-  static UInt <span class="Att">SqRoot</span>(UInt S,UInt x); // S,x > 0
+  static UInt <span class="Att">SqRoot</span>(UInt S,UInt x); // S,x &gt; 0
   
   static UInt <span class="Att">SqRoot</span>(UInt S);
 
@@ -138,7 +138,7 @@ integral value.
 </p>
 
 <p>
-The first function requires that <b>S > 0</b> and <b>x > 0</b>, <b>x</b> is the initial approximation
+The first function requires that <b>S &gt; 0</b> and <b>x &gt; 0</b>, <b>x</b> is the initial approximation
 of the result. The better this approximation the faster is function.
 </p>
 
