--- a/html/page_EventRecord.html
+++ b/html/page_EventRecord.html
@@ -46,7 +46,7 @@ fashion. The data format is standard. <b>CCore</b> has a prototype tool <b>Event
 with event records. You may also create and use your own such tools for your particular purpose.
 </p>
 
-<img src="EventView.png">
+<img src="EventView.png" />
 
 <h2>EventRecorder</h2>
 
@@ -686,7 +686,7 @@ into a group to help a visualization of events of related types.
 tools to show a marker on this event. There is a standard list of marker glyphs.
 </p>
 
-<img src="Markers.png">
+<img src="Markers.png" />
 
 <p>
 By convention, the marker from an enum field with a non-null markers is used to mark an event.
