--- a/html/page_Fifo.html
+++ b/html/page_Fifo.html
@@ -36,7 +36,7 @@
 The <b>Partial class</b> <b>Fifo</b> implements a buffer fifo upon a provided buffer.
 </p>
 
-<img src="Fifo.png">
+<img src="Fifo.png" />
 
 <pre>
 
