--- a/html/page_Lists.html
+++ b/html/page_Lists.html
@@ -45,14 +45,14 @@ many tasks, including system core tasks, because they don't require a memory all
 can be used in such contexts where memory allocation is impossible or not desirable. 
 </p>
 
-<img src="List2.png">
+<img src="List2.png" />
 
 <p>
 Non-intrusive lists can be built atop on these algorithms.
 Container lists looks like:
 </p>
 
-<img src="List1.png">
+<img src="List1.png" />
 
 <h3>CCore list algorithms</h3>
 
@@ -130,7 +130,7 @@ simultaneously. We use the term "element" for the linked list node, and "object"
 
 <h4>SLink LinearAlgo</h4>
 
-<img src="SList1.png">
+<img src="SList1.png" />
 
 <p>
 Linear list has a top element and terminated with a null pointer.
@@ -275,7 +275,7 @@ In fact, it may be any element or null pointer.
 <b>del()</b> deletes the top element from the list, the pointer to the object is returned (it can be null).
 </p>
 
-<img src="SList2.png">
+<img src="SList2.png" />
 
 <pre>
 
@@ -353,7 +353,7 @@ and the second to the last. We call the top element first in this case.
 
 <h4>SLink CircularAlgo</h4>
 
-<img src="SList3.png">
+<img src="SList3.png" />
 
 <p>
 Circular list has a top element, the bottom element points to the top. We call the last element bottom
@@ -516,7 +516,7 @@ Pointer to this element is returned.
 
 <h4>DLink LinearAlgo</h4>
 
-<img src="DList1.png">
+<img src="DList1.png" />
 
 <p>
 Linear list has a top element and terminated with null pointers. Double link allows to move forward and backward.
@@ -939,7 +939,7 @@ moves to the next position in respect to the cursor movement direction.
 
 <h4>DLink CircularAlgo</h4>
 
-<img src="DList2.png">
+<img src="DList2.png" />
 
 <p>
 Circular list has a top element, the last element is linked to the top. Double link allows to move forward and backward.
