--- a/html/page_RadixHeap.html
+++ b/html/page_RadixHeap.html
@@ -43,7 +43,7 @@ When a block is allocated, it is stamped by the "magic number". This stamp is us
 It makes the heap protected from incorrect operations (not 100%).
 </p>
 
-<img src="RadixHeap.png">
+<img src="RadixHeap.png" />
 
 <p>
 <b>RadixHeapStore</b> manages free heap blocks. The efficiency of this class is a key to the efficiency of the heap
