--- a/html/page_TimeScope.html
+++ b/html/page_TimeScope.html
@@ -37,7 +37,7 @@ timeouts to them, if we want to fit in some common time limit. The class <b>Time
 It is a simple class, which represents some time interval:
 </p>
 
-<img src="TimeScope.png">
+<img src="TimeScope.png" />
 
 <pre>
 
