--- a/html/page_CompletePacket.html
+++ b/html/page_CompletePacket.html
@@ -28,7 +28,7 @@
 
 <h2>(XCore) CompletePacket</h2>
 
-<p class="Files">Files <b>CCore/inc/CompletePacket.h</b>
+<p class="Files">Files <b>CCore/inc/CompletePacket.h</b> </p>
 
 <p>
 The function <b>CompletePacket_int</b> is <b>XCore</b> only. This function is required to complete a packet
