--- a/html/page_Integer.html
+++ b/html/page_Integer.html
@@ -876,7 +876,7 @@ The length of <b>b</b> must be greater or equal than the length of <b>a</b>,
 <b>a</b> and <b>b</b> do not overlap.
 The result representation requires one additional unit, this unit is returned.
 I.e. the result length is <b>nb+1</b> and the resulting <b>MSU</b> is not stored in the <b>b</b> body, 
-but returned by the function.</p>
+but returned by the function.
 </p>
 
 <pre>
