--- a/html/page_IntegerFastAlgo.html
+++ b/html/page_IntegerFastAlgo.html
@@ -28,7 +28,7 @@
 
 <h2>IntegerFastAlgo</h2>
 
-<p class="Files">Files <b>CCore/inc/math/IntegerFastAlgo.h</b> 
+<p class="Files">Files <b>CCore/inc/math/IntegerFastAlgo.h</b> </p> 
 
 <p>
 <b>CCore</b> provides a stub implementation of the <a href="page_Integer.html#Algo">integer fast algorithm package</a>.
