--- a/html/page_Printing.html
+++ b/html/page_Printing.html
@@ -336,7 +336,7 @@ Printf(NoPrint,"this string goes nowhere");
 
 </pre>
 
-<p>The next type is <b>PrintBase</b>. It is designed to be a base class for actual output types.
+<p>The next type is <b>PrintBase</b>. It is designed to be a base class for actual output types.</p>
 
 <pre>
 
