--- a/html/page_PTPSecureServer.html
+++ b/html/page_PTPSecureServer.html
@@ -240,7 +240,7 @@ To use the server a client must perform the <b>PKE</b> negotiation process with 
 with the server <b>PKE</b> port. 
 Then it must open a <b>PSec</b> connection using the generated session key over the <b>UDP</b> protocol
 with the server <b>PSec</b> port. 
-Finally, client can use this secure packet channel to perform <a href="page_PTP.html"><b>PTP</b> 
+Finally, client can use this secure packet channel to perform <a href="page_PTP.html"><b>PTP</b></a> 
 <a href="page_PTPHFS.html"><b>HFS</b></a> transactions with the server.
 Server implements the <b>PTP Support</b> service and the <b>HFS</b> service without exec functions.
 </p>
