--- a/html/page_SIntFunc.html
+++ b/html/page_SIntFunc.html
@@ -115,7 +115,7 @@ represented as <b>UInt</b> type.
 </p>
 
 <p>
-<b>RShift()</b> performs the arithmetic shift right. The result is <b>a/2<sup>shift</b> rounded down.
+<b>RShift()</b> performs the arithmetic shift right. The result is <b>a/2<sup>shift</sup></b> rounded down.
 </p>
 
 <p>
