--- a/html/page_Installation.html
+++ b/html/page_Installation.html
@@ -59,10 +59,14 @@ You can also include this directory into the <b>Windows path</b>.
 Unpack <b>CCore</b> package (or checkout the source tree from a repository) somewhere under you <b>cygwin home</b> directory. <span class="Hint">Avoid file and directory names with space characters.</span>
 
 </p>
-<p>
 
-Open <b>bash</b> console (or another console you would prefer, just configure it to use <b>cygwin bash</b> as a command processor).<br /><br />
-Go to the <b>CCore root</b> directory. The following commands are used to prepare, clean and build the whole installation:</p>
+<p>
+Open <b>bash</b> console (or another console you would prefer, just configure it to use <b>cygwin bash</b> as a command processor).
+</p>
+
+<p>
+Go to the <b>CCore root</b> directory. The following commands are used to prepare, clean and build the whole installation:
+</p>
 
 <ul>
 <li><span class="Cmd">make</span> &mdash; to build all,</li>
