--- a/html/page_Arrays.html
+++ b/html/page_Arrays.html
@@ -1740,9 +1740,9 @@ class Creator // copy efficient functor initializer
 You may use a <b>Creator</b> in a generic array "Creator" constructors and methods.
 </p>
 
-<p>
-<a name="Builder"><b>Builder</b></a> is a functor, creating a range of objects. It looks like:
-</p>
+<a name="Builder"><p>
+<b>Builder</b> is a functor, creating a range of objects. It looks like:
+</p></a>
 
 <pre>
 
